@@ -11,19 +11,19 @@ class XmlSerializationTest < Test::Unit::TestCase
     assert_match %r{^<contact>},  @xml
     assert_match %r{</contact>$}, @xml
   end
-  
+
   def test_should_serialize_default_root_with_namespace
     @xml = Contact.new.to_xml :namespace=>"http://xml.rubyonrails.org/contact"
     assert_match %r{^<contact xmlns="http://xml.rubyonrails.org/contact">},  @xml
     assert_match %r{</contact>$}, @xml
   end
-  
+
   def test_should_serialize_custom_root
     @xml = Contact.new.to_xml :root => 'xml_contact'
     assert_match %r{^<xml-contact>},  @xml
     assert_match %r{</xml-contact>$}, @xml
   end
-  
+
   def test_should_allow_undasherized_tags
     @xml = Contact.new.to_xml :root => 'xml_contact', :dasherize => false
     assert_match %r{^<xml_contact>},  @xml
@@ -48,25 +48,25 @@ class DefaultXmlSerializationTest < Test::Unit::TestCase
   def test_should_serialize_string
     assert_match %r{<name>aaron stack</name>},     @xml
   end
-  
+
   def test_should_serialize_integer
     assert_match %r{<age type="integer">25</age>}, @xml
   end
-  
+
   def test_should_serialize_binary
     assert_match %r{YmluYXJ5ZGF0YQ==\n</avatar>},    @xml
     assert_match %r{<avatar(.*)(type="binary")},     @xml
     assert_match %r{<avatar(.*)(encoding="base64")}, @xml
   end
-  
+
   def test_should_serialize_datetime
     assert_match %r{<created-at type=\"datetime\">2006-08-01T00:00:00Z</created-at>}, @xml
   end
-  
+
   def test_should_serialize_boolean
     assert_match %r{<awesome type=\"boolean\">false</awesome>}, @xml
   end
-  
+
   def test_should_serialize_yaml
     assert_match %r{<preferences type=\"yaml\">--- \n:gem: ruby\n</preferences>}, @xml
   end
@@ -80,14 +80,14 @@ class NilXmlSerializationTest < Test::Unit::TestCase
   def test_should_serialize_string
     assert_match %r{<name nil="true"></name>},     @xml
   end
-  
+
   def test_should_serialize_integer
     assert %r{<age (.*)></age>}.match(@xml)
     attributes = $1
     assert_match %r{nil="true"}, attributes
     assert_match %r{type="integer"}, attributes
   end
-  
+
   def test_should_serialize_binary
     assert %r{<avatar (.*)></avatar>}.match(@xml)
     attributes = $1
@@ -95,21 +95,21 @@ class NilXmlSerializationTest < Test::Unit::TestCase
     assert_match %r{encoding="base64"}, attributes
     assert_match %r{nil="true"}, attributes
   end
-  
+
   def test_should_serialize_datetime
     assert %r{<created-at (.*)></created-at>}.match(@xml)
     attributes = $1
     assert_match %r{nil="true"}, attributes
     assert_match %r{type="datetime"}, attributes
   end
-  
+
   def test_should_serialize_boolean
     assert %r{<awesome (.*)></awesome>}.match(@xml)
     attributes = $1
     assert_match %r{type="boolean"}, attributes
     assert_match %r{nil="true"}, attributes
   end
-  
+
   def test_should_serialize_yaml
     assert %r{<preferences(.*)></preferences>}.match(@xml)
     attributes = $1
@@ -137,30 +137,57 @@ class DatabaseConnectedXmlSerializationTest < Test::Unit::TestCase
     assert_match %r{<hello-post type="Post">}, xml
     assert_match %r{<hello-post type="StiPost">}, xml
   end
-  
+
   def test_methods_are_called_on_object
     xml = authors(:david).to_xml :methods => :label, :indent => 0
     assert_match %r{<label>.*</label>}, xml
   end
-  
+
   def test_should_not_call_methods_on_associations_that_dont_respond
     xml = authors(:david).to_xml :include=>:hello_posts, :methods => :label, :indent => 2
     assert !authors(:david).hello_posts.first.respond_to?(:label)
     assert_match %r{^  <label>.*</label>}, xml
     assert_no_match %r{^      <label>}, xml
   end
-  
+
+  def test_procs_are_called_on_object
+    proc = Proc.new { |options| options[:builder].tag!('nationality', 'Danish') }
+    xml = authors(:david).to_xml(:procs => [ proc ])
+    assert_match %r{<nationality>Danish</nationality>}, xml
+  end
+
+  def test_top_level_procs_arent_applied_to_associations
+    author_proc = Proc.new { |options| options[:builder].tag!('nationality', 'Danish') }
+    xml = authors(:david).to_xml(:procs => [ author_proc ], :include => :posts, :indent => 2)
+
+    assert_match %r{^  <nationality>Danish</nationality>}, xml
+    assert_no_match %r{^ {6}<nationality>Danish</nationality>}, xml
+  end
+
+  def test_procs_on_included_associations_are_called
+    posts_proc = Proc.new { |options| options[:builder].tag!('copyright', 'DHH') }
+    xml = authors(:david).to_xml(
+      :indent => 2,
+      :include => {
+        :posts => { :procs => [ posts_proc ] }
+      }
+    )
+
+    assert_no_match %r{^  <copyright>DHH</copyright>}, xml
+    assert_match %r{^ {6}<copyright>DHH</copyright>}, xml
+  end
+
   def test_should_include_empty_has_many_as_empty_array
-    authors(:david).posts.delete_all    
+    authors(:david).posts.delete_all
     xml = authors(:david).to_xml :include=>:posts, :indent => 2
-    
+
     assert_equal [], Hash.from_xml(xml)['author']['posts']
     assert_match %r{^  <posts type="array"/>}, xml
   end
-  
+
   def test_should_has_many_array_elements_should_include_type_when_different_from_guessed_value
     xml = authors(:david).to_xml :include=>:posts_with_comments, :indent => 2
-    
+
     assert Hash.from_xml(xml)
     assert_match %r{^  <posts-with-comments type="array">}, xml
     assert_match %r{^    <posts-with-comment type="Post">}, xml
@@ -171,5 +198,5 @@ class DatabaseConnectedXmlSerializationTest < Test::Unit::TestCase
     assert types.include?('Post')
     assert types.include?('StiPost')
   end
-  
+
 end
